[gd_scene load_steps=4 format=3 uid="uid://bakj4si0q0a4m"]

[ext_resource type="Script" path="res://src/UI/menus/settings/rebind/input action rebind button/input_action_rebind_button.gd" id="1_cp5wh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t45qf"]
bg_color = Color(0, 0, 0, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fpn87"]
bg_color = Color(1, 1, 1, 0.5)

[node name="InputActionRebindButton" type="Button"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_t45qf")
theme_override_styles/hover = SubResource("StyleBoxFlat_fpn87")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fpn87")
script = ExtResource("1_cp5wh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ActionNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "action name"
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ActionInputLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "action input key
"
vertical_alignment = 1
